some desgin better, create single post componenet and upload post on site

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,8 @@
   .scrolled::-webkit-scrollbar {
    display: none;
   }
-
+  .cross:hover .icon{
+      opacity: 1;
+      transition: all 0.3s;
+  }
 @tailwind utilities;
